# auth_app

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: db.sqlite3
backend/backend/: logging_config.py  settings.py  urls.py
backend/users_api/: models.py  serializers.py  tests.py  urls.py  validations.py  views.py
backend/users_api/migrations/: 0001_initial.py  0002_appuser_is_active_appuser_is_staff.py  0003_remove_appuser_is_staff_appuser_date_joined.py  0004_appuser_is_admin.py  0005_appuser_avatar.py
frontend/: package.json
frontend/src/: main.jsx
frontend/src/assets/: global.css
frontend/src/components/Common/: Forms.jsx  MessageBox.jsx  Navbar.jsx
frontend/src/pages/: Account.jsx  Dashboard.jsx  PasswordReset.jsx  SendResetPassword.jsx  Signin.jsx  Signup.jsx  index.jsx
frontend/src/routes/: Index.jsx  Root.jsx  routes.jsx
frontend/src/services/: error_handlers.js  error_handlers.jsx  userservice.js
frontend/src/theme/: index.jsx
frontend/src/utils/: ProtectedRoutes.js  debug.js  misc_func.js
