[tool.poetry]
name = "dj-react"
version = "0.1.0"
description = ""
authors = ["Cap0n3 <cap0n3@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
